# buwu

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: test-and-release.yml
src/: lib.rs  main.rs
src/extractor/: mod.rs  tests.rs
src/extractor/html/: books_1.html  success_page_1.html
